--- a/src/index.css
+++ b/src/index.css
@@ -9,4 +9,15 @@ body {
   background-image: url("./assets/backgroung.png");
   background-color: rgb(0, 0, 0);
   color: white;
+  overflow-x: hidden;
+}
+::-webkit-scrollbar{
+  width:15px;
+}
+::-webkit-scrollbar-track{
+  background: rgb(0, 0, 0);
+}
+::-webkit-scrollbar-thumb{
+  background:linear-gradient(brown,#63a73a);
+  border-radius: 10px;
 }
