--- a/Frontend/src/App.css
+++ b/Frontend/src/App.css
@@ -3,6 +3,11 @@
   font-weight: 400;
   font-style: normal;
 }
+.josefin {
+  font-family: "Josefin Slab", serif;
+  font-weight: 400;
+  font-style: normal;
+}
 .bg-cont1{
   background: url("https://res.cloudinary.com/dh26dmbg3/image/upload/v1721299921/Rectangle_48_hhbhby.png");
 }
