--- a/Frontend/src/index.css
+++ b/Frontend/src/index.css
@@ -12,7 +12,7 @@ body {
   color: white;
   overflow-x: hidden;
 }
-::-webkit-scrollbar{
+/* ::-webkit-scrollbar{
   width:5px;
 }
 ::-webkit-scrollbar-track{
@@ -22,4 +22,4 @@ body {
   background:linear-gradient(brown,#63a73a);
   border-radius: 10px;
   border: 1px solid #63a73a;
-}
+} */
