--- a/Frontend/src/index.css
+++ b/Frontend/src/index.css
@@ -23,3 +23,14 @@ body {
   border-radius: 10px;
   border: 1px solid #63a73a;
 } */
+ .perspective {
+  perspective: 1000px;
+}
+
+.transform-style-preserve-3d {
+  transform-style: preserve-3d;
+}
+
+.backface-hidden {
+  backface-visibility: hidden;
+}
